# crab-lambda

./: Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/: ci_setup.yml
.github/workflows/: ci.yml  rm_artifacts.yml
examples/easy/: Cargo.toml  Dockerfile  Makefile.toml  bundle.sh
examples/easy/src/: lib.rs
src/: main.rs
